[package]
name = "mpc-ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
libp2p = { version = "0.40.0", features = ["tcp-tokio"] }
tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
async-stream = "0.3.3"
async-trait = "0.1.52"
round-based = { version = "0.1.4" }
pretty_env_logger = "0.4"
prost = "0.9.0"
regex = "1.3.9"
anyhow = "1.0.56"
multi-party-ecdsa = {git = "https://github.com/ZenGo-X/multi-party-ecdsa"}

[dev-dependencies]
round-based = { version = "0.1.4", features = ["dev"] }

[build-dependencies]
prost-build = "0.9.0"
