[package]
name = "mpc-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
libp2p = { version = "0.40.0", features = ["tcp-tokio"] }
tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = {version = "1.0", features = ["derive"] }
serde_ipld_dagcbor = "0.1.2"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
async-stream = "0.3.3"
async-trait = "0.1.52"
pretty_env_logger = "0.4"
anyhow = "1.0.56"

[dev-dependencies]
