[package]
name = "mpc-party"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
async-std = { version = "1.10.0", features = ["attributes"] }
round-based = { version = "0.1.4" }
pretty_env_logger = "0.4"
multi-party-ecdsa = {git = "https://github.com/ZenGo-X/multi-party-ecdsa"}

mpc-p2p = {path = "../p2p"}

[dev-dependencies]
round-based = { version = "0.1.4", features = ["dev"] }
