[package]
name = "mpc-party"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0.56"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
libp2p = "0.40.0"
serde = {version = "1.0", features = ["derive"] }
serde_ipld_dagcbor = "0.1.2"
round-based = { version = "0.1.4" }
multi-party-ecdsa = {git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
pretty_env_logger = "0.4"

mpc-p2p = {path = "../client/network" }
mpc-peerset = {path = "../client/peerset"}

[dev-dependencies]
round-based = { version = "0.1.4", features = ["dev"] }
