[package]
name = "mpc-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0.56"
libp2p = { version = "0.40.0", features = ["tcp-tokio"] }
mpc-peerset = { version="4.0.0-dev", path = "../peerset" }
serde = {version = "1.0", features = ["derive"] }
serde_ipld_dagcbor = "0.1.2"
parity-scale-codec = "3.1.2"
futures = "0.3.21"
async-std = { version = "1.10.0"}
async-stream = "0.3.3"
async-trait = "0.1.52"
parking_lot = "0.12.0"
round-based = { version = "0.1.4" }
pretty_env_logger = "0.4"

[dev-dependencies]
