[package]
name = "mpc-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0.56"
derive_more = "0.99.16"
libp2p = { version = "0.40.0" }
mpc-peerset = { version="4.0.0-dev", path = "../peerset" }
serde = {version = "1.0", features = ["derive"] }
serde_ipld_dagcbor = "0.1.2"
parity-scale-codec = "3.1.2"
hex = "0.4.0"
async-std = { version = "1.9"}
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1.52"
parking_lot = "0.12.0"
thiserror = "1"
zeroize = "1.5.4"
unsigned-varint = { version = "0.6.0", features = [
    "futures",
    "asynchronous_codec",
] }

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
