[package]
description = "Connectivity manager"
homepage = "http://parity.io"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "mpc-peerset"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-peerset"
readme = "README.md"

[dependencies]
log = "0.4.8"
futures = "0.3.9"
libp2p = { version = "0.40.0", default-features = false }
serde = {version = "1.0", features = ["derive"] }
itertools = "0.10"
blake3 = "1.3"
arrayvec = "0.7"

[dev-dependencies]
rand = "0.7.2"
